~ fixed word break in tables

--- a/_sass/nicolabs/layout.scss
+++ b/_sass/nicolabs/layout.scss
@@ -39,7 +39,6 @@ th.empty, td.empty {
     border: none;
 }
 th, td {
-    word-break: break-all;
     padding: $small-spacing;
 }
 th {
